<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_homepage">

    <fragment
        android:id="@+id/navigation_homepage"
        android:name="com.example.letmecook.fragment.HomepageFragment"
        android:label="@string/title_homepage"
        tools:layout="@layout/fragment_homepage" />

    <fragment
        android:id="@+id/navigation_recipe_list"
        android:name="com.example.letmecook.fragment.RecipeListFragment"
        android:label="@string/title_recipe_list"
        tools:layout="@layout/fragment_recipe_list" />

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.example.letmecook.fragment.ChatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/navigation_inventory"
        android:name="com.example.letmecook.fragment.InventoryFragment"
        android:label="@string/title_inventory"
        tools:layout="@layout/fragment_inventory" />

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.example.letmecook.fragment.FavoritesFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorites" />

</navigation>